sumo/tests/duarouter/alternatives/style2_input/errors/xml/missing_element_end/errors.duarouter
Error: Expected end of tag 'routealt'
 In file 'input_alts.rou.xml.alt'
 At line/column 14/6.

Quitting (on error).
